deployment/openshift/template_openshift_dc_blue_green.yml
apiVersion: template.openshift.io/v1
kind: Template
metadata:
  creationTimestamp: null
  name: bluegreenservice
objects:
- apiVersion: v1
  kind: Service
  metadata:
    name: blue
    labels:
      app: bluegreenservice
  spec:
    ports:
    - port: 8080
      targetPort: 8080
    selector:
      deploymentconfig: blue
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    name: blue
    labels:
      app: bluegreenservice
  spec:
    replicas: 1
    selector:
      deploymentconfig: blue
    strategy:
      type: Recreate
    template:
      metadata:
        labels:
          deploymentconfig: blue
      spec:
        containers:
        - env:
          - name: deployment
            value: blue
          image: docker-registry.default.svc:5000/blue-green/bluegreenservice:0.0.1-SNAPSHOT
          name: bluegreenservice-blue
          ports:
          - containerPort: 8080
            protocol: TCP
          # resources:
          #   requests:
          #     cpu: 100m 
          #     memory: 200Mi 
          #   limits:
          #     cpu: 200m 
          #     memory: 400Mi             
- apiVersion: v1
  kind: Route
  metadata:
    name: blue
    labels:
      app: bluegreenservice
  spec:
    to:
      kind: Service
      name: blue
- apiVersion: v1
  kind: Route
  metadata:
    name: green
    labels:
      app: bluegreenservice
  spec:
    to:
      kind: Service
      name: green
- apiVersion: v1
  kind: Route
  metadata:
    name: blue-green
    labels:
      app: bluegreenservice
  spec:
    to:
      kind: Service
      name: "${COLOR}"
- apiVersion: v1
  kind: Service
  metadata:
    name: green
    labels:
      app: bluegreenservice
  spec:
    ports:
    - port: 8080
      targetPort: 8080
    selector:
      deploymentconfig: green
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    name: green
    labels:
      app: bluegreenservice
  spec:
    replicas: 1
    selector:
      deploymentconfig: green
    strategy:
      type: Recreate
    template:
      metadata:
        labels:
          deploymentconfig: green
      spec:
        containers:
        - env:
          - name: deployment
            value: green
          image: docker-registry.default.svc:5000/blue-green/bluegreenservice:0.0.1-SNAPSHOT
          name: bluegreenservice-green
          ports:
          - containerPort: 8080
            protocol: TCP
          # resources:
          #   requests:
          #     cpu: 100m 
          #     memory: 200Mi 
          #   limits:
          #     cpu: 200m 
          #     memory: 400Mi             
parameters:
  - name: COLOR
    description: "Application color"
    required: true
